--- a/readme.textile
+++ b/readme.textile
@@ -6,5 +6,5 @@ h4. Creating new rails app
 
 h4. Rails app structure
 
-* [/app_structure/app]
+* "app":/app_structure/app
 * [/app_structure/locales]
